public class Beach {
}
