@startuml

' Define classes and their relationships

class Main {
    +main(args: String[])
}

class GameController {
    -player: Player
    +startGame(): void
    +movePlayer(location: String): void
    +handleEvent(): void
}

class Player {
    -name: String
    -health: int
    -inventory: Inventory
    +move(): void
    +useItem(): void
}

class Inventory {
    ' Add inventory-related attributes and methods as needed
}

abstract class Location {
    +event(): void
}

class Beach {
}

class Jungle {
}

class Sea {
}

' Define relationships between classes
Main --> GameController
GameController --> Player
Player --> Inventory

' Locations inherit from Location
Beach --|> Location
Jungle --|> Location
Sea --|> Location

@enduml